# pythonProject5

./: README.md  pyproject.toml  simple1.py
project_name/src/: main.py
project_name/tests/: test_main.py
